# zkcat

./: README.md
examples/: sample.txt  sample.txt.zkproof  sample_redacted.txt
host/: Cargo.toml
host/src/: main.rs
methods/: Cargo.toml
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
